Login user endpoint adjustment
