# cde-msa-sp-dragon-ball/src/main/resources/openapi.yaml
@@ -289,13 +289,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenericResponse'
+                $ref: '#/components/schemas/LoginResponse'
         '500':
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenericResponse'
+                $ref: '#/components/schemas/LoginResponse'
               examples:
                 Internal server error response:
                   value:
@@ -306,7 +306,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenericResponse'
+                $ref: '#/components/schemas/LoginResponse'
               examples:
                 Not found response:
                   value:
@@ -317,7 +317,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenericResponse'
+                $ref: '#/components/schemas/LoginResponse'
               examples:
                 Bad request response:
                   value:
@@ -328,7 +328,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenericResponse'
+                $ref: '#/components/schemas/LoginResponse'
               examples:
                 Bad request response:
                   value:
@@ -700,6 +700,30 @@ components:
       required:
         - email
         - password
+    LoginResponse:
+      type: object
+      properties:
+        code:
+          type: string
+          description: "Response's code"
+          example: "200"
+        message:
+          type: string
+          description: "Response's message"
+          example: "OK"
+        data:
+          $ref: '#/components/schemas/LoginDataResponse'
+    LoginDataResponse:
+      type: object
+      properties:
+        userName:
+          type: string
+          description: "User name"
+          example: "cmuyon"
+        email:
+          type: string
+          description: "User password"
+          example: "password"
     FavoritesRequest:
       type: object
       properties:
